# HPC2k25-MPI

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  pyproject.toml
src/: Definitions.cppm  Lookup.cppm  Lookup.hpp  Node.base.cppm  Node.baseline.cppm  Node.comm.cppm  Node.cppm  Node.hpp  Node.interface.cppm  Node.optimise.cppm  Node_base.cpp  Node_baseline.cpp  Node_comm.cpp  Node_optimise.cpp  Node_pull.cpp  Process.hpp  main.cpp
tests/: generete_graph.py  validate.py
tests/single/: 0.in
tests/single_random/: 0.in
