[project]
name = "HPC2k25-MPI"
version = "0.1.0"
description = "HPC2k25 MPI project at MIMUW"
authors = [{ name = "Mateusz Kapusta", email = "mr.kapusta@student.uw.edu.pl" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "networkit@git+https://github.com/networkit/networkit",
]
