[project]
name = "HPC2k25-MPI"
version = "0.1.0"
description = "HPC2k25 MPI project at MIMUW"
authors = [{ name = "Mateusz Kapusta", email = "mr.kapusta@student.uw.edu.pl" }]
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "numpy>1.25",
    "networkit; sys_platform == 'linux'",
    "networkit@git+https://github.com/networkit/networkit; sys_platform == 'darwin'",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

